JEAP-6889: Improve code cosemetics (Sonar).